--- a/puppet/modules/apache/templates/vhost-default.conf.erb
+++ b/puppet/modules/apache/templates/vhost-default.conf.erb
@@ -1,29 +1,37 @@
-# ************************************
-# Default template in module puppetlabs-apache
-# Managed by Puppet
-# ************************************
+# ********************************************* #
+# Default template in module puppetlabs-apache  #
+# Managed by Puppet                             #
+# ********************************************* #
 
-NameVirtualHost <%= vhost_name %>:<%= port %>
 <VirtualHost <%= vhost_name %>:<%= port %>>
-  ServerName <%= srvname %>
-<% if serveradmin %>
-  ServerAdmin <%= serveradmin %>
-<% end %>
-<% if serveraliases.is_a? Array -%>
-<% serveraliases.each do |name| -%><%= "  ServerAlias #{name}\n" %><% end -%>
-<% elsif serveraliases != '' -%>
-<%= "  ServerAlias #{serveraliases}" -%>
-<% end -%>
-  DocumentRoot <%= docroot %>
-  <Directory <%= docroot %>>
-    Options <%= options %>
-    AllowOverride All
-    Order allow,deny
-    allow from all
-  </Directory>
-  ErrorLog <%= logroot %>/<%= name %>_error.log
-  LogLevel warn
-  CustomLog <%= logroot %>/<%= name %>_access.log combined
-  ServerSignature Off
-</VirtualHost>
+    <% if serveradmin %>
+    ServerAdmin <%= serveradmin %>
+    <% end %>
+    ServerName <%= srvname %>
+    <% if serveraliases.is_a? Array -%>
+    <% serveraliases.each do |name| -%><%= "  ServerAlias #{name}\n" %><% end -%>
+    <% elsif serveraliases != "" -%>
+    <%= "  ServerAlias #{serveraliases}" -%>
+    <% end -%>
 
+    DocumentRoot <%= docroot %>
+    <Directory <%= docroot %>>
+        Options <%= options %>
+        DirectoryIndex app_dev.php
+        AllowOverride All
+        Order allow,deny
+        allow from all
+
+        <IfModule mod_rewrite.c>
+            RewriteEngine On
+            RewriteCond %{REQUEST_FILENAME} !-f
+            RewriteCond %{REQUEST_FILENAME} !-d
+            RewriteRule ^(.*)$ app_dev.php [QSA,L]
+        </IfModule>
+    </Directory>
+
+    ErrorLog <%= logroot %>/<%= name %>.error.log
+    LogLevel warn
+    CustomLog <%= logroot %>/<%= name %>.access.log combined
+    ServerSignature Off
+</VirtualHost>
