fixing bootstrap menu template after twig upgrade (new sf version)

--- a/project/app/Resources/BraincraftedBootstrapBundle/views/Menu/bootstrap.html.twig
+++ b/project/app/Resources/BraincraftedBootstrapBundle/views/Menu/bootstrap.html.twig
@@ -1,9 +1,11 @@
 {% extends "knp_menu.html.twig" %}
 
+{% import _self as _invoke_method %}
+
 {% macro attributes(attributes) %}
     {% for name, value in attributes %}
-        {%- if value is not none and value is not sameas(false) -%}
-            {{- ' %s="%s"'|format(name, value is sameas(true) ? name|e : value|e)|raw -}}
+        {%- if value is not none and value is not same as(false) -%}
+            {{- ' %s="%s"'|format(name, value is same as(true) ? name|e : value|e)|raw -}}
         {%- endif -%}
     {%- endfor -%}
 {% endmacro %}
@@ -29,7 +31,7 @@
 {% endblock %}
 
 {% block list %}
-    {% if item.hasChildren and options.depth is not sameas(0) and item.displayChildren %}
+    {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}
         {% set listClass = "" %}
         {% set listAttributes = listAttributes|merge({"class": listAttributes.class|default("")|trim}) %}
 
@@ -63,7 +65,7 @@
 
         {% set listAttributes = listAttributes|merge({"class": (listAttributes.class|default("") ~ " " ~ listClass)|trim}) %}
 
-        <ul{{ _self.attributes(listAttributes) }}>
+        <ul{{ _invoke_method.attributes(listAttributes) }}>
             {{ block("children") }}
         </ul>
     {% endif %}
@@ -71,9 +73,9 @@
 
 {% block dropdownList %}
     {% spaceless %}
-        {% if item.hasChildren and options.depth is not sameas(0) and ((item.extras.dropdown is not defined and item.displayChildren is sameas(true) or item.extras.dropdown is defined and item.extras.dropdown is sameas(true) and item.displayChildren is sameas(true))) %}
+        {% if item.hasChildren and options.depth is not same as(0) and ((item.extras.dropdown is not defined and item.displayChildren is same as(true) or item.extras.dropdown is defined and item.extras.dropdown is same as(true) and item.displayChildren is same as(true))) %}
             {% set listAttributes = listAttributes|merge({"class": (listAttributes.class|default("") ~ " dropdown-menu")|trim}) %}
-            <ul{{ _self.attributes(listAttributes) }}>
+            <ul{{ _invoke_method.attributes(listAttributes) }}>
                 {{ block("children") }}
             </ul>
         {% endif %}
@@ -82,7 +84,7 @@
 
 {% block listList %}
     {% spaceless %}
-        {% if item.hasChildren and options.depth is not sameas(0) and item.displayChildren %}
+        {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}
             {{ block("children") }}
         {% endif %}
     {% endspaceless %}
@@ -123,15 +125,15 @@
         {%- if item.actsLikeLast %}
             {%- set classes = classes|merge([options.lastClass]) %}
         {%- endif %}
-        {%- if item.hasChildren and ((options.style is defined and options.style == "list") or options.currentDepth is not sameas(1)) %}
+        {%- if item.hasChildren and ((options.style is defined and options.style == "list") or options.currentDepth is not same as(1)) %}
             {%- set classes = classes|merge(["nav-header"]) %}
-        {%- elseif item.hasChildren and options.style is defined and options.style in ["tabs", "justified-tabs", "pills", "justified-pills", "navbar", "navbar-right", "navbar_justified"] and ((item.extras.dropdown is not defined and item.displayChildren is sameas(true) or item.extras.dropdown is defined and item.extras.dropdown is sameas(true) and item.displayChildren is sameas(true))) %}
+        {%- elseif item.hasChildren and options.style is defined and options.style in ["tabs", "justified-tabs", "pills", "justified-pills", "navbar", "navbar-right", "navbar_justified"] and ((item.extras.dropdown is not defined and item.displayChildren is same as(true) or item.extras.dropdown is defined and item.extras.dropdown is same as(true) and item.displayChildren is same as(true))) %}
             {%- set classes = classes|merge(["dropdown"]) %}
         {%- endif %}
 
         {%- set attributes = item.attributes %}
 
-        {%- if options.style is defined and options.style == "navbar" and attributes.divider is defined and attributes.divider is not empty and options.currentDepth is sameas(1) %}
+        {%- if options.style is defined and options.style == "navbar" and attributes.divider is defined and attributes.divider is not empty and options.currentDepth is same as(1) %}
             {%- set classes = classes|merge(["divider-vertical"]) %}
         {%- elseif attributes.divider is defined and attributes.divider is not empty %}
             {%- set classes = classes|merge(["divider"]) %}
@@ -142,11 +144,11 @@
         {%- endif %}
 
         {# displaying the item #}
-        <li{{ _self.attributes(attributes) }}>
+        <li{{ _invoke_method.attributes(attributes) }}>
             {%- if attributes.divider is defined and attributes.divider is not empty %}
-            {%- elseif item.hasChildren and options.style is defined and options.style in ["tabs", "justified-tabs", "pills", "justified-pills", "navbar", "navbar-right", "navbar_justified"] and options.currentDepth is sameas(1) and ((item.extras.dropdown is not defined and item.displayChildren is sameas(true) or item.extras.dropdown is defined and item.extras.dropdown is sameas(true) and item.displayChildren is sameas(true))) %}
+            {%- elseif item.hasChildren and options.style is defined and options.style in ["tabs", "justified-tabs", "pills", "justified-pills", "navbar", "navbar-right", "navbar_justified"] and options.currentDepth is same as(1) and ((item.extras.dropdown is not defined and item.displayChildren is same as(true) or item.extras.dropdown is defined and item.extras.dropdown is same as(true) and item.displayChildren is same as(true))) %}
                 {{ block("dropdownElement") }}
-            {%- elseif item.hasChildren and options.style is defined and options.style in ["tabs", "justified-tabs", "pills", "justified-pills", "navbar", "navbar-right", "navbar_justified"] and options.currentDepth is sameas(1) and ((item.extras.dropdown is defined and item.extras.dropdown is sameas(false) or item.displayChildren(false) )) %}
+            {%- elseif item.hasChildren and options.style is defined and options.style in ["tabs", "justified-tabs", "pills", "justified-pills", "navbar", "navbar-right", "navbar_justified"] and options.currentDepth is same as(1) and ((item.extras.dropdown is defined and item.extras.dropdown is same as(false) or item.displayChildren(false) )) %}
                 {{ block("linkElement") }}
             {%- elseif item.uri is not empty and ((matcher is defined and not matcher.isCurrent(item)) or options.currentAsLink) %}
                 {{ block("linkElement") }}
@@ -160,7 +162,7 @@
             {%- set childrenClasses = item.childrenAttribute("class") is not empty ? [item.childrenAttribute("class")] : [] %}
             {%- set childrenClasses = childrenClasses|merge(["menu_level_" ~ item.level]) %}
             {%- set listAttributes = item.childrenAttributes|merge({"class": childrenClasses|join(" ") }) %}
-            {%- if item.hasChildren and options.style is defined and (options.style == "list" or options.currentDepth is not sameas(1)) %}
+            {%- if item.hasChildren and options.style is defined and (options.style == "list" or options.currentDepth is not same as(1)) %}
                 {{ block("listList") }}
             {%- elseif item.hasChildren and options.style is defined and options.style in ["tabs", "justified-tabs", "pills", "justified-pills", "navbar", "navbar-right", "navbar_justified"] %}
                 {{ block("dropdownList") }}
@@ -171,14 +173,14 @@
     {% endif %}
 {% endblock %}
 
-{% block linkElement %}<a href="{{ item.uri }}"{{ _self.attributes(item.linkAttributes) }}>{{ block("label") }}</a>{% endblock %}
+{% block linkElement %}<a href="{{ item.uri }}"{{ _invoke_method.attributes(item.linkAttributes) }}>{{ block("label") }}</a>{% endblock %}
 
 {% block dropdownElement %}
     {% spaceless %}
         {% set labelAttributes = item.labelAttributes %}
         {% set labelAttributes = labelAttributes|merge({"class": (labelAttributes.class|default("") ~ " dropdown-toggle")|trim}) %}
         {% set labelAttributes = labelAttributes|merge({"data-toggle": "dropdown"}) %}
-        <a href="javascript:void(0)"{{ _self.attributes(labelAttributes) }}>{{ block("label") }} <b class="caret"></b></a>
+        <a href="javascript:void(0)"{{ _invoke_method.attributes(labelAttributes) }}>{{ block("label") }} <!--<b class="caret"></b>--></a>
     {% endspaceless %}
 {% endblock dropdownElement %}
 
@@ -187,6 +189,6 @@
     {% endspaceless %}
 {% endblock dividerElement %}
 
-{% block spanElement %}<span{{ _self.attributes(item.labelAttributes) }}>{{ block("label") }}</span>{% endblock %}
+{% block spanElement %}<span{{ _invoke_method.attributes(item.labelAttributes) }}>{{ block("label") }}</span>{% endblock %}
 
 {% block label %}{% if options.allow_safe_labels and item.getExtra("safe_label", false) %}{{ item.label|raw|parse_icons }}{% else %}{{ item.label|parse_icons }}{% endif %}{% endblock %}
